Move more things to conventions